Логика вынесена в сервисы Добавлены интерфейсы Добавлена установка цвета в зависимости от цены

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<header>Japan Charts</header>
-<canvas #canvas></canvas>
+<header>Японские свечи</header>
+<canvas #canvas>Update or choose another browser</canvas>
