Данные агрегируются в один объект для последующего кеширования

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <header>Японские свечи</header>
-<canvas #canvas>Update or choose another browser</canvas>
+<canvas #canvas id="canvas">Update or choose another browser</canvas>
